# vesc-eschub

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  esc-control-hub.ioc
Core/Inc/: main.h  octospi.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tim.h
Core/Src/: adc.c  dcache.c  fdcan.c  gpio.c  main.c  octospi.c  rtc.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  tim.c  usb.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
encoder/: CMakeLists.txt
encoder/include/encoder/: encoder.hpp  fdcan_driver.hpp  vesc_can.hpp
encoder/src/: encoder.cpp  fdcan_driver.cpp  vesc_can.cpp
